--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,12 +11,15 @@
     "chart.js": "2.9.4",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
+    "node-modules": "^1.0.1",
     "pg": "^8.7.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "reactjs-alert": "^1.2.7",
+    "typescript": "4.2.3"
   },
   "scripts": {
     "start": "craco start",
