--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "multer": "^1.4.2",
     "node-modules": "^0.0.1",
     "nodemon": "^2.0.13",
