--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "reactjs-alert": "^1.2.7",
-    "typescript": "4.2.3"
+    "typescript": "4.2.3",
+    "validator": "^13.7.0"
   },
   "scripts": {
     "start": "craco start",
