--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,6 +5,7 @@
     "@craco/craco": "^6.3.0",
     "@fortawesome/fontawesome-free": "5.15.3",
     "@popperjs/core": "2.9.1",
+    "@reduxjs/toolkit": "^1.7.1",
     "@tailwindcss/forms": "0.2.1",
     "axios": "^0.21.1",
     "axios-react": "^2.0.8",
@@ -18,7 +19,9 @@
     "react-dom": "17.0.1",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "react-scroll-section": "^3.1.0",
     "reactjs-alert": "^1.2.7",
     "typescript": "4.2.3"
