--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,22 +10,23 @@
     "axios": "^0.21.1",
     "axios-react": "^2.0.8",
     "chart.js": "2.9.4",
-    "gulp": "4.0.2",
+    "gulp": "^3.9.1",
     "gulp-append-prepend": "1.0.8",
     "minimatch": "^3.0.4",
     "moment": "^2.29.1",
-    "node-modules": "^1.0.1",
+    "node-modules": "^0.0.1",
     "pg": "^8.7.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "react-scroll": "^1.8.4",
     "react-scroll-section": "^3.1.0",
     "react-validation": "^3.0.7",
     "reactjs-alert": "^1.2.7",
+    "typescript": "4.2.3",
     "validator": "^13.7.0"
   },
   "scripts": {
@@ -56,7 +57,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
-    "postcss": "^7.0.36",
+    "postcss": "^5.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.14"
   }
 }
