--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,30 +4,32 @@
   "dependencies": {
     "@craco/craco": "^6.3.0",
     "@fortawesome/fontawesome-free": "5.15.3",
-    "@popperjs/core": "2.9.1",
+    "@hookform/resolvers": "^2.8.5",
+    "@popperjs/core": "^2.9.1",
     "@reduxjs/toolkit": "^1.7.1",
     "@tailwindcss/forms": "0.2.1",
     "axios": "^0.21.1",
     "axios-react": "^2.0.8",
     "chart.js": "2.9.4",
-    "gulp": "^3.9.1",
+    "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
-    "minimatch": "^3.0.4",
     "moment": "^2.29.1",
-    "node-modules": "^0.0.1",
+    "node-modules": "^1.0.1",
     "pg": "^8.7.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.22.5",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
     "react-scroll-section": "^3.1.0",
     "react-validation": "^3.0.7",
     "reactjs-alert": "^1.2.7",
     "typescript": "4.2.3",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "craco start",
@@ -57,7 +59,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
-    "postcss": "^5.0.0",
+    "postcss": "^7.0.36",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.14"
   }
 }
