--- a/back-end/package.json
+++ b/back-end/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "multer": "^1.4.2",
+    "mysql": "^2.18.1",
     "node-modules": "^0.0.1",
     "nodemon": "^2.0.13",
     "pg": "^8.7.1",
